. randomized name of channels which is used for event handler tests

--- a/tests/test-scenario-3.yml
+++ b/tests/test-scenario-3.yml
@@ -26,7 +26,7 @@
           -
             src: 'sources/eh1.js'
             name: '{{ lookup("env","EVENT_HANDLER_1_NAME") }}'
-            channels: 'eh-channel-1'
+            channels: '{{ lookup("env","EVENT_HANDLER_1_CHANNEL_NAME") }}'
             event: 'js-before-publish'
     - name: Add '{{ lookup("env","EVENT_HANDLER_2_NAME") }}' event handler to '{{ lookup("env","BLOCK_NAME") }}'
       ignore_errors: True
@@ -41,7 +41,7 @@
           -
             src: 'sources/eh2.js'
             name: '{{ lookup("env","EVENT_HANDLER_2_NAME") }}'
-            channels: 'eh-channel-2'
+            channels: '{{ lookup("env","EVENT_HANDLER_2_CHANNEL_NAME") }}'
             event: 'js-before-publish'
     - name: Add two event handlers to '{{ lookup("env","BLOCK_NAME") }}' (no changes)
       ignore_errors: True
@@ -56,12 +56,12 @@
           -
             src: 'sources/eh1.js'
             name: '{{ lookup("env","EVENT_HANDLER_1_NAME") }}'
-            channels: 'eh-channel-1'
+            channels: '{{ lookup("env","EVENT_HANDLER_1_CHANNEL_NAME") }}'
             event: 'js-before-publish'
           -
             src: 'sources/eh2.js'
             name: '{{ lookup("env","EVENT_HANDLER_2_NAME") }}'
-            channels: 'eh-channel-2'
+            channels: '{{ lookup("env","EVENT_HANDLER_2_CHANNEL_NAME") }}'
             event: 'js-before-publish'
     - name: Change '{{ lookup("env","EVENT_HANDLER_1_NAME") }}' event handler event.
       ignore_errors: True
