. updated test script to upload event handler sources if non-local connection used for tests . changed module configuration parameter from 'block' to 'name' (represent target block name) . updated module docs regarding 'chanes' configuration parameter. Only block 'name' can be changed using this parameter ('description' can be changed directly in module call configuration) . changed module configuration parameter from 'pwd' tp 'password' . migrated 'urlencode' import from try..catch to 'six.moves.urllib.parse' usage in import . removed custom method which is used to verify whether value is empty

--- a/tests/test-prepare.yml
+++ b/tests/test-prepare.yml
@@ -1,4 +1,16 @@
 ---
+- name: Prepare remote file system.
+  hosts: blocks
+  gather_facts: False
+  tasks:
+    - name: Ensures '~/sources' directory exists
+      file: path='~/sources' state=directory
+      when: inventory_hostname != 'localhost'
+    - name: Copy event handler source files.
+      template: src='{{ item }}' dest='~/sources/' force=Yes
+      with_fileglob:
+        - sources/*.js
+      when: inventory_hostname != 'localhost'
 - name: Test PubNub Blocks module for Ansible.
   hosts: blocks
   gather_facts: False
@@ -6,8 +18,8 @@
     - name: Delete '{{ lookup("env","BLOCK_NAME") }}'
       pubnub_blocks:
         email: '{{ lookup("env","PUBNUB_USER") }}'
-        pwd: '{{ lookup("env","PUBNUB_PASS") }}'
+        password: '{{ lookup("env","PUBNUB_PASS") }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: absent
