--- a/tests/test-scenario-1.yml
+++ b/tests/test-scenario-1.yml
@@ -8,17 +8,16 @@
       register: module_cache
       pubnub_blocks:
         email: '{{ lookup("env","PUBNUB_USER") }}'
-        pwd: '{{ lookup("env","PUBNUB_PASS") }}'
+        password: '{{ lookup("env","PUBNUB_PASS") }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BAD_BLOCK_NAME") }}'
+        name: '{{ lookup("env","BAD_BLOCK_NAME") }}'
         state: present
     - name: Create '{{ lookup("env","BLOCK_NAME") }}'
       ignore_errors: True
-      register: module_cache
       pubnub_blocks:
-        cache: '{{ module_cache | default({}) }}'
+        cache: '{{ module_cache }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: present
