--- a/tests/test-scenario-4.yml
+++ b/tests/test-scenario-4.yml
@@ -8,10 +8,10 @@
       register: module_cache
       pubnub_blocks:
         email: '{{ lookup("env","PUBNUB_USER") }}'
-        pwd: '{{ lookup("env","PUBNUB_PASS") }}'
+        password: '{{ lookup("env","PUBNUB_PASS") }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: present
         event_handlers:
           -
@@ -24,10 +24,10 @@
       ignore_errors: True
       register: module_cache
       pubnub_blocks:
-        cache: '{{ module_cache | default({}) }}'
+        cache: '{{ module_cache }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: present
         event_handlers:
           -
@@ -40,26 +40,25 @@
       ignore_errors: True
       register: module_cache
       pubnub_blocks:
-        cache: '{{ module_cache | default({}) }}'
+        cache: '{{ module_cache }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: stop
     - name: Delete '{{ lookup("env","BLOCK_NAME") }}'
       ignore_errors: True
       register: module_cache
       pubnub_blocks:
-        cache: '{{ module_cache | default({}) }}'
+        cache: '{{ module_cache }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: absent
     - name: Delete '{{ lookup("env","BLOCK_NAME") }}' (no changes)
       ignore_errors: True
-      register: module_cache
       pubnub_blocks:
-        cache: '{{ module_cache | default({}) }}'
+        cache: '{{ module_cache }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: absent
