--- a/tests/test-scenario-5.yml
+++ b/tests/test-scenario-5.yml
@@ -8,21 +8,19 @@
       register: module_cache
       pubnub_blocks:
         email: '{{ lookup("env","PUBNUB_USER") }}'
-        pwd: '{{ lookup("env","PUBNUB_PASS") }}'
+        password: '{{ lookup("env","PUBNUB_PASS") }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: present
     - name: Add two event handlers to '{{ lookup("env","BLOCK_NAME") }}'
       ignore_errors: True
       register: module_cache
       pubnub_blocks:
-        cache: '{{ module_cache | default({}) }}'
-        email: '{{ lookup("env","PUBNUB_USER") }}'
-        pwd: '{{ lookup("env","PUBNUB_PASS") }}'
+        cache: '{{ module_cache }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: present
         event_handlers:
           -
@@ -39,41 +37,34 @@
       ignore_errors: True
       register: module_cache
       pubnub_blocks:
-        cache: '{{ module_cache | default({}) }}'
-        email: '{{ lookup("env","PUBNUB_USER") }}'
-        pwd: '{{ lookup("env","PUBNUB_PASS") }}'
+        cache: '{{ module_cache }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: start
     - name: Start '{{ lookup("env","BLOCK_NAME") }}' block (no changes)
       ignore_errors: True
       register: module_cache
       pubnub_blocks:
-        cache: '{{ module_cache | default({}) }}'
-        email: '{{ lookup("env","PUBNUB_USER") }}'
-        pwd: '{{ lookup("env","PUBNUB_PASS") }}'
+        cache: '{{ module_cache }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: start
     - name: Delete '{{ lookup("env","BLOCK_NAME") }}'
       ignore_errors: True
       register: module_cache
       pubnub_blocks:
-        email: '{{ lookup("env","PUBNUB_USER") }}'
-        pwd: '{{ lookup("env","PUBNUB_PASS") }}'
+        cache: '{{ module_cache }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: absent
     - name: Delete '{{ lookup("env","BLOCK_NAME") }}' (no changes)
       ignore_errors: True
-      register: module_cache
       pubnub_blocks:
-        email: '{{ lookup("env","PUBNUB_USER") }}'
-        pwd: '{{ lookup("env","PUBNUB_PASS") }}'
+        cache: '{{ module_cache }}'
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
-        block: '{{ lookup("env","BLOCK_NAME") }}'
+        name: '{{ lookup("env","BLOCK_NAME") }}'
         state: absent
