--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   # Install Ansible.
   - pip install ansible
   - pip install paramiko PyYAML Jinja2 httplib2 six
+  - pip freeze
 
 script:
   - python run-tests.py
