--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   # Install Ansible.
   - pip install ansible
   - pip install paramiko PyYAML Jinja2 httplib2 six
-  - pip freeze
+  - pip install --upgrade six
 
 script:
   - python run-tests.py
