. debugging Travis issue with six module

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_install:
 install:
   # Install Ansible.
   - pip install ansible
-  - pip uninstall six
-  - pip install paramiko PyYAML Jinja2 httplib2 six
+  - pip uninstall six --yes
+  - pip install httplib2 six
   - pip install --upgrade six
 
 script:
