^ fixed value for key-path function usage with names of application/keyset/block and handlers. . reduced unnecessary requests (better pre-procesing of previous results) . event handler name change won't trigger block restart + added tests mocking and fixtures to reduce number of requests to PubNub REST API

--- a/tests/test-prepare.yml
+++ b/tests/test-prepare.yml
@@ -1,17 +1,5 @@
 ---
-- name: Prepare remote file system.
-  hosts: blocks
-  gather_facts: False
-  tasks:
-    - name: Ensures '~/sources' directory exists
-      file: path='~/sources' state=directory
-      when: inventory_hostname != 'localhost'
-    - name: Copy event handler source files.
-      template: src='{{ item }}' dest='~/sources/' force=Yes
-      with_fileglob:
-        - sources/*.js
-      when: inventory_hostname != 'localhost'
-- name: Test PubNub Blocks module for Ansible.
+- name: Prepare to test PubNub BLOCKs module for Ansible.
   hosts: blocks
   gather_facts: False
   tasks:
