--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_install:
   - sudo apt-get update -qq
 
 install:
-  # Install Ansible.
   - pip install ansible
+  - pip install vcrpy
 
 script:
   - python tests/scripts/preflight.py
