--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ python:
 #  - "3.5"
 #  - "3.6"
 
+# Fetch generated list of fixtures
+addons:
+  artifacts: true
+
+
 before_install:
   # Make sure everything's up to date.
   - sudo apt-get update -qq
