--- a/tests/test-scenario-4.yml
+++ b/tests/test-scenario-4.yml
@@ -43,7 +43,7 @@
         application: '{{ lookup("env","PUBNUB_APP_NAME") }}'
         keyset: '{{ lookup("env","PUBNUB_APP_KEYSET_NAME") }}'
         name: '{{ lookup("env","BLOCK_NAME") }}'
-        state: stop
+        state: stopped
         validate_certs: '{{ lookup("env", "VALIDATE_CERTIFICATES") }}'
     - name: Delete '{{ lookup("env","BLOCK_NAME") }}'
       register: module_cache
